--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,19 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Check codestyle
-        run: git ls-files *.{c,h} | xargs clang-format --version -i --verbose && git diff --exit-code
+        run: git ls-files .{c,h} | xargs clang-format --version -i --verbose && git diff --exit-code
 
       - name: Build application
         run: make
+
+  test:
+    needs: build
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Check codestyle sec
+        run: git ls-files test/.c | xargs clang-format -i --verbose && git diff --exit-code
+
+      - name: Test application
+        run: make test
